# weather-forecast

./: CMakeLists.txt  README.md  main.cpp
include/gumbo-parser/: Selector.h
output/: html.txt  test.csv  test.xlsx  weather_forecast
src/: HttpsUtil.cpp  HttpsUtil.h  Weather.cpp  Weather.h
